--- a/client/package.json
+++ b/client/package.json
@@ -8,7 +8,7 @@
     "build": "vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "start": "vite preview --port 10001"
+    "start": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
