--- a/client/package.json
+++ b/client/package.json
@@ -5,8 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "vite build && cp public/_redirects dist/",
     "preview": "vite preview",
     "start": "vite preview"
   },
